# sudoku

./: Cargo.toml
src/: board.rs  main.rs
ui/: cell.slint  main.slint
