[package]
name = "sudoku"
version = "0.1.0"
license = "GPL-3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
rand = "0.8"

[dependencies.slint]
version = "0.2"
default-features = false
features = ["compat-0-2-0", "std", "backend-gl-all"]

[build-dependencies]
slint-build = "0.2"
